# ki-arena

./: .gitignore  README.md  experience_of_0.txt  feedback_for_0.txt  pyproject.toml  requirements.txt
docs/: Praktikum_Deliverable_Checkliste_Stud.md  Praktikum_Deliverable_Checkliste_Stud_HAD.md  agenten.md  aufgabe2.md  demo.md  edgecases.md  ergebnisse.md  ergebnisuebersicht.md  experiment.md  idee.md  labnotebook.md  metriken.md  projektdokumentation.md  reflexion.md  slides.md  stolpersteine.md  transparenz.md
docs/detailiertedoku/: Praktikum_Deliverable_Checkliste_Stud.md  edgecases.md  experiment.md  labnotebook.md  metrics.md  observability.md  projektdokumentation.md  promptdoc.md  stolpersteine.md
docs/meeting/: minutes_11jun.txt
notebooks/: env_prototype.ipynb  structure_test.ipynb
notebooks/.ipynb_checkpoints/: env_prototype-checkpoint.ipynb  structure_test-checkpoint.ipynb
src/agents/: base.py  rl_agent.py  rule_agent.py
src/analysis/: evaluator.py  logger.py
src/arena/: arena.py  phases.py  runner.py
src/env/: config.py  env.py  observation.py  reward.py  termination.py
src/ki_arena.egg-info/: PKG-INFO  SOURCES.txt
src/llm/: llmmanager.py  ollamatest.py
src/notebooks/: env_prototype.ipynb
src/notebooks/.ipynb_checkpoints/: env_prototype-checkpoint.ipynb  structure_test-checkpoint.ipynb
src/sim/: main.py  run_headless.py  simulation_parameters.txt
src/sim/agents/: __init__.py  base.py  blackboard.py  llm_agent.py  msg.py  rl_agent.py  rule_agent.py
src/sim/analysis/: coordination.py  evaluator.py  llm_call_stats.py  llm_logger.py  (+3 more)
(+38 files in other folders)
