[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ki-arena"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pettingzoo",
    "gymnasium",
    "numpy",
    "matplotlib",
    "ollama",      # nur für LLM-Agenten
    "mistralai",   # nur für LLM-Agenten
]

[tool.setuptools.packages.find]
where = ["src"]